<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg_main">

    <ImageButton  android:id="@+id/bt_begin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_x="90dp"
	    android:layout_y="50dp"
	    android:contentDescription="@string/begingame"
        />
    <ImageButton  android:id="@+id/bt_set"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_x="200dp"
	    android:layout_y="100dp"
	    android:contentDescription="@string/setgame"
        />
    <ImageButton  android:id="@+id/bt_help"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_x="310dp"
	    android:layout_y="50dp"
	    android:contentDescription="@string/helpgame"
        />
    <ImageButton  android:id="@+id/bt_about"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_x="80dp"
	    android:layout_y="160dp"
	    android:contentDescription="@string/helpgame"
        />
    
    <ImageView android:id="@+id/title"
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:layout_x="150dp"
	    android:layout_y="20dp"
	    android:contentDescription="@string/title"
        />
    <ImageButton  android:id="@+id/bt_money"
        android:layout_width="100dp"
        android:layout_height="63dp"
        android:layout_x="100dp"
	    android:layout_y="270dp"
	    android:contentDescription="@string/buymoney"
        />
    <TextView android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="260dp"
        android:layout_y="270dp"
        android:textColor="#ff0000"
        android:textSize="20dp"
        />
    <ImageButton  android:id="@+id/bt_tools"
        android:layout_width="100dp"
        android:layout_height="63dp"
        android:layout_x="400dp"
	    android:layout_y="270dp"
	    android:contentDescription="@string/buytools"
        />
</AbsoluteLayout>
